Overflow, breakpoint, gap corrections

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -14,10 +14,11 @@
   display: flex;
   background-color: #fff;
   color: black;
-  padding: 4.5px 20px 4.5px;
+  padding: 24.5px 20px;
   align-items: center;
   justify-content: space-between;
   border-radius: 0 0 10px 10px;
+  max-height: 79px;
 }
 
 .card__title {
@@ -29,6 +30,7 @@
   white-space: nowrap;
   overflow: hidden;
   max-width: 215px;
+  margin: 0;
 }
 
 .card__like-button {
