--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,7 +2,7 @@
   padding-top: 45px;
   line-height: 74px;
   max-width: 880px;
-  border-bottom: 1px solid rgba(84, 84, 84, 1);
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 .header__logo {
@@ -40,5 +40,6 @@
   .header__logo {
     height: 24px;
     width: 126px;
+    padding-bottom: 10px;
   }
 }
