--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -21,10 +21,10 @@
     "title button"
     "description description";
   grid-template-columns: minmax(auto, 415px) auto;
-  max-height: 77px;
   max-width: 415px;
-  grid-gap: 10px;
+  grid-gap: 8px;
   align-items: baseline;
+  margin: 0;
 }
 
 .profile__title {
@@ -34,6 +34,10 @@
   font-weight: 500;
   grid-area: title;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 500px;
 }
 
 .profile__edit-button {
@@ -43,6 +47,7 @@
   width: 24px;
   border: 1px solid rgba(255, 255, 255, 1);
   margin: 0;
+  padding: 0;
 }
 
 .profile__edit-button:hover {
@@ -53,9 +58,13 @@
 .profile__description {
   font-family: "Inter", "Arial", sans-serif;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 21px;
   font-weight: 400;
   grid-area: description;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 500px;
   margin: 0;
 }
 
@@ -80,13 +89,6 @@
     margin: 0 20px 0;
     max-width: calc(100% - 40px);
   }
-
-  .profile__title {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    max-width: 360px;
-  }
 }
 
 @media screen and (max-width: 770px) {
@@ -96,25 +98,20 @@
   }
 
   .profile__info {
-    display: flex;
-    flex-wrap: wrap;
+    grid-template-columns: minmax(auto, 320px) auto;
     width: 100vw;
-    justify-content: center;
     margin: 0;
     padding: 0;
   }
 
   .profile__title {
-    max-width: 360px;
+    font-size: 34px;
+    line-height: 40px;
+    margin: 0;
   }
 
   .profile__description {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    max-width: 340px;
-    margin-right: auto;
-    margin-left: 28px;
+    max-width: 360px;
   }
 }
 
@@ -133,16 +130,25 @@
     padding: 0;
   }
 
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
   .profile__title {
     max-width: 210px;
     font-size: 22px;
     line-height: 27px;
+    text-align: center;
   }
 
   .profile__description {
     width: 100%;
     margin: 0;
     text-align: center;
+    max-width: 280px;
   }
 
   .profile__add-button {
@@ -158,8 +164,11 @@
     line-height: 17px;
   }
 
+  .profile__title {
+    margin-left: 22px;
+  }
   .profile__edit-button {
-    margin-left: 10px;
+    margin: 0;
     height: 18px;
     width: 18px;
   }
@@ -167,6 +176,7 @@
   .profile__add-button {
     width: 59vw;
     margin: 36px 78px;
+    background-size: 16px 16px;
   }
 }
 
@@ -178,6 +188,10 @@
 
   .profile__info {
     align-items: center;
+  }
+
+  .profile__description {
+    max-width: 240px;
   }
 
   .profile__add-button {
